# nostd_error_compare

./: README.md
cortex-m-error/: .gitignore  Cargo.toml  Taskfile.yml
cortex-m-error/examples/: error_manual.rs  error_snafu.rs  error_snafu_pretty_print.rs  error_snafu_small.rs
pc/: Taskfile.yml
pc/manual/: Cargo.toml
pc/manual/src/: main.rs
pc/original/: Cargo.toml
pc/original/src/: lib.rs  main.rs  manual_error.rs  snafu.rs  thiserror.rs
pc/snafu/: Cargo.toml
pc/snafu/src/: main.rs
pc/snafu_pretty_print/src/: lib.rs  main.rs
